# office-relocation-commute-engine

./: .gitignore  CEST_V0.2_SPEC.md  CEST_v0.1.2_COMPLETE (1).md  FRONTEND_TASK.md  README.md  SPEC_v0.3.md
cest/: pyproject.toml
cest/docs/: aws-architecture.md  test-gaps.md  v0.3.1-backend.md  v0.3.1-frontend.md  v0.3.2-frontend.md  v0.3.2-spec.md  v0.3.3-frontend.md  v0.3.3-sample-data.md  v0.3.3-spec.md  v0.4-spec.md
cest/schemas/: evaluation_report_v0.1.2.json  evaluation_report_v0.2.0.json  evaluation_report_v0.3.3.json
cest/src/cest/: main.py
cest/src/cest/data/: station_hazard.json  station_master.json  tokyo_core_v1.json
cest/src/cest/engine/: combination.py  csv_parser.py  explain_pack.py  fare_estimator.py  graph_loader.py  kpi.py  notices.py  pipeline.py  ranking.py  routing.py  sensitivity.py
cest/src/cest/models/: request.py
cest/src/cest/routes/: evaluate.py  parse_csv.py
cest/src/cest/utils/: schema_validate.py
cest/tests/: conftest.py  test_backward_compat_v1_request.py  test_csv_parser.py  test_determinism.py  test_logic.py  test_monotonicity.py  test_unreachable.py
cest/tests/fixtures/: demo_3candidates.json  demo_3candidates_response.json
web/: demo_response.json  index.html  station_master.json
